--- a/.github/workflows/PR_Test.yml
+++ b/.github/workflows/PR_Test.yml
@@ -21,7 +21,7 @@ jobs:
 		 - name: if fail
            uses: actions/github-script@0.2.0  // github-script 액션을 사용한다.
            with:
-              github-token: ${{github.token}}  // github token을 선언해준다
+              github-token: ${{ secrets.METRICS_TOKEN }}  // github token을 선언해준다
               script: |                        // script에 원하는 스크립트를 작성
                 const ref = "${{github.ref}}"
                 const pull_number = Number(ref.split("/")[2])
